--- a/hugoLearningSite/public/index.html
+++ b/hugoLearningSite/public/index.html
@@ -428,7 +428,7 @@
 
 <h3 id="workshop-video">Workshop Video</h3>
 
-<p><code>\\***REMOVED***\Usertmp$\pyCamp\Video</code></p>
+<p><code>\\dummy\Usertmp$\pyCamp\Video</code></p>
 
 <h3 id="workshop-keynotes-and-codes">Workshop Keynotes and Codes</h3>
 
