--- a/hugoLearningSite/public/tasks/task-1/video/index.html
+++ b/hugoLearningSite/public/tasks/task-1/video/index.html
@@ -467,7 +467,7 @@
         
 
 
-<p><code>\\***REMOVED***\Usertmp$\pyCamp\Video</code></p>
+<p><code>\\dummy\Usertmp$\pyCamp\Video</code></p>
 
 
 <footer class=" footline" >
